# mlds6

./: README.md  pyproject.toml  requirements.txt
docs/acceptance/: fase1_compliance.md
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
scripts/data_acquisition/: main.py
src/nombre_paquete/: __init__.py
src/nombre_paquete/database/: __init__.py  elliptic_io.py
src/nombre_paquete/visualization/: __init__.py  reporting.py
