[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nombre_paquete"
version = "0.1.0"
authors = [
    {name = "Josue Alexander Nunez Prada"},
    {name = "Iveth Dayana Diaz Carabali"},
    {name = "Adriana Dorado Soler"}
]
description = "Deteccion de transacciones ilicitas de Bitcoin con GCN sobre el dataset Elliptic"
requires-python = ">3.8"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "kagglehub>=0.2"
]

[tool.setuptools.packages.find]
where = ["src/"]
